fix: correct style on mobile.

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,5 +9,5 @@ $black: #000;
 
 // width
 $desktop: 1280px;
-$tablet: 768px;
-$mobile: 480px;
+$tablet: 1279px;
+$mobile: 767px;
