--- a/src/scss/page/_project.scss
+++ b/src/scss/page/_project.scss
@@ -1,5 +1,9 @@
+.detail {
+  margin-top: 10px;
+}
+
 .back {
-  display: block;
+  display: inline-block;
   margin-bottom: 20px;
   color: $grey-light;
 
@@ -11,16 +15,12 @@
 .description {
   margin-bottom: 35px;
 
-  @include mobile {
-    margin-top: 20px;
-  }
-
   &__top {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
 
-    @include tablet {
+    @include mobile {
       flex-direction: column;
       align-items: flex-start;
     }
@@ -32,7 +32,7 @@
       line-height: 1.6;
       letter-spacing: 1px;
 
-      @include tablet {
+      @include mobile {
         font-size: 24px;
         margin-bottom: 10px;
       }
